release: v0.11.0 (#81)
* fix: Update controllers error handler (#80)

* refactor: Print log when non-domain exceptions are caught

* fix: Caught ujson parse exception as a bad request error

* feat: List files (#78)

* feat: Add `isShared` field to `FileExtendedMeta` entity

* refactor: Add domain exception to throw when an user cannot read a file

* feat: Add new method to the repository to list files

* feat: Create endpoint to list files

* fix: Fix query to list directories to include nested directories

* test: Add tests to the endpoint to list directories

* refactor: Remove redundant if statements

* docs(http): Add http examples for the new endpoint

* docs(openapi): Update parent uuid parameter in the openapi spec

* fix: Update function to parse nullable strings to ujson value

---------
