# docs/spec.openapi.yaml
@@ -16,7 +16,7 @@ paths:
   /files/list/{user_uuid}:
     get:
       tags: ["File"]
-      description: List files in the given directory. List the user's root directory by default when the parent_uuid query parameter is not provided.
+      description: List files in the given directory. List the user's root directory by default when the parentUUID query parameter is not provided.
       parameters:
         - in: path
           name: user_uuid
@@ -25,7 +25,7 @@ paths:
             example: "658b4e63-b5ac-46a7-ac43-efb6a1415130"
           required: true
         - in: query
-          name: parent_uuid
+          name: parentUUID
           schema:
             type: string
             example: "5ad724f0-4091-453a-914a-c2d11d69d1e3"
@@ -46,7 +46,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/error_response"
         "404":
-          description: Not found. No directory with the given parent_uuid was found.
+          description: Not found. No directory with the given parentUUID was found.
           content:
             application/json:
               schema:
